// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test App Component should test priceContainerDown when priceChange is less than 0 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="cryptoCoin"
      >
        <img
          alt="Bitcoin-0 symbol"
          class="coinLogo"
          src="https://assets.coingecko.com/coins/images/1/large/bitcoin.png?1547033579"
        />
        <div
          class="coinNameWrap"
        >
          <h1
            class="coinName"
          >
            Bitcoin
          </h1>
          <p
            class="coinSymbol"
          >
            BTC
          </p>
        </div>
        <p
          class="coinPrice"
        >
          $
          18374.03
        </p>
        <p
          class="coinMarketCap"
        >
          Market Cap: $
          351733780640
        </p>
        <p
          class="coinVolume"
        >
          Volume (24H): $
          90463295403
        </p>
        <div
          class="priceContainerDown"
        >
          <i
            class="fas fa-angle-down fa-1x"
          />
          <p
            class="priceChange"
          >
            -11.17
            %
          </p>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="cryptoCoin"
    >
      <img
        alt="Bitcoin-0 symbol"
        class="coinLogo"
        src="https://assets.coingecko.com/coins/images/1/large/bitcoin.png?1547033579"
      />
      <div
        class="coinNameWrap"
      >
        <h1
          class="coinName"
        >
          Bitcoin
        </h1>
        <p
          class="coinSymbol"
        >
          BTC
        </p>
      </div>
      <p
        class="coinPrice"
      >
        $
        18374.03
      </p>
      <p
        class="coinMarketCap"
      >
        Market Cap: $
        351733780640
      </p>
      <p
        class="coinVolume"
      >
        Volume (24H): $
        90463295403
      </p>
      <div
        class="priceContainerDown"
      >
        <i
          class="fas fa-angle-down fa-1x"
        />
        <p
          class="priceChange"
        >
          -11.17
          %
        </p>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Test App Component should test priceContainerUp when priceChange is greater than 0 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="cryptoCoin"
      >
        <img
          alt="Bitcoin-0 symbol"
          class="coinLogo"
          src="https://assets.coingecko.com/coins/images/1/large/bitcoin.png?1547033579"
        />
        <div
          class="coinNameWrap"
        >
          <h1
            class="coinName"
          >
            Bitcoin
          </h1>
          <p
            class="coinSymbol"
          >
            BTC
          </p>
        </div>
        <p
          class="coinPrice"
        >
          $
          18374.03
        </p>
        <p
          class="coinMarketCap"
        >
          Market Cap: $
          351733780640
        </p>
        <p
          class="coinVolume"
        >
          Volume (24H): $
          90463295403
        </p>
        <div>
          <div
            class="priceContainerUp"
          >
            <i
              class="fas fa-angle-up fa-1x"
            />
            <p
              class="priceChange"
            >
              11.17
              %
            </p>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="cryptoCoin"
    >
      <img
        alt="Bitcoin-0 symbol"
        class="coinLogo"
        src="https://assets.coingecko.com/coins/images/1/large/bitcoin.png?1547033579"
      />
      <div
        class="coinNameWrap"
      >
        <h1
          class="coinName"
        >
          Bitcoin
        </h1>
        <p
          class="coinSymbol"
        >
          BTC
        </p>
      </div>
      <p
        class="coinPrice"
      >
        $
        18374.03
      </p>
      <p
        class="coinMarketCap"
      >
        Market Cap: $
        351733780640
      </p>
      <p
        class="coinVolume"
      >
        Volume (24H): $
        90463295403
      </p>
      <div>
        <div
          class="priceContainerUp"
        >
          <i
            class="fas fa-angle-up fa-1x"
          />
          <p
            class="priceChange"
          >
            11.17
            %
          </p>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
